# Some-Cpp-examples

./: CMakeLists.txt  CPP-FUTURE-PROJECTS.txt  GleichungLoesen.cpp  Makefile_template.txt  README.md  TS_problem.cpp  accumulate.cpp  angle_range.h  arduinoMap.cpp  ascii_converter.cpp  asio_client.cpp  asio_server.cpp  bank_management.cpp  basic_encryption.cpp  bestWishes.cpp  billing_system.cpp  binary_search.cpp  binet_formula.cpp  bubbleSort.cpp  bytesToBits.cpp  class_optional_param.cpp  class_with_optional.cpp  compiles.txt  copy_vector.cpp  count_if.cpp  cpp_quiz.txt  cross_product.cpp  csvReader.cpp  deckOfCards.cpp  decrypt.cpp  differentiation.cpp  doctor_information.txt  dynamic_cast.cpp  employees.txt  enums.cpp  esp8266-rt-thread.cpp  espeak_test.cpp  fileContents.cpp  for_each.cpp  formateDate.cpp  (+86 more)
3DMatrix/: CMakeLists.txt
3DMatrix/lib/: Matrix3D.h
3DMatrix/src/: Matrix3D.cpp  main.cpp
3DPoint/: CMakeLists.txt
3DPoint/lib/: Point3D.h
3DPoint/src/: Point3D.cpp  main.cpp
BinaryTree/: CMakeLists.txt
BinaryTree/src/: BinaryTree.cpp  (+1 more)
algorithm_lib/: all_of.cpp  any_of.cpp  binary_search.cpp  copy_backward.cpp  copy_if.cpp  copy_n.cpp  count.cpp  count_if.cpp  equal.cpp  equal_range.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  for_each.cpp  generate.cpp  generate_n.cpp  includes.cpp  inplace_merge.cpp  is_heap.cpp  is_heap_until.cpp  is_partitioned.cpp  is_permutation.cpp  is_sorted.cpp  iter_swap.cpp  lexicograph_comp.cpp  lower_bound1.cpp  lower_bound2.cpp  replace.cpp  replace_if.cpp  transform.cpp  turn_sprite.cpp  upper_bound.cpp
algorithms/: CMakeLists.txt
arrays/: CMakeLists.txt
binarySearch/: CMakeLists.txt
binarySearchTree/: CMakeLists.txt
binarySearchTree/lib/: binarySearchTree.h
binarySearchTree/src/: binarySearchTree.cpp  main.cpp
binaryTreeNodes/: CMakeLists.txt
binary_tree/: CMakeLists.txt
binary_tree/lib/: binary_tree.h
binary_tree/src/: binary_tree.cpp  main.cpp
bst/: CMakeLists.txt
bucket_sort/: CMakeLists.txt
c_linkedList/: CMakeLists.txt  gaussian_distribution.cpp
chatbot_1/: main.cpp  record.cpp  record.h  records.txt  string_functions.cpp  string_functions.h
chatbot_2/: chatbot.cpp  chatbot.h  knowledge.txt  main.cpp  question.cpp  question.h
dynamic/: canSum.cpp  canSum_again.cpp  canSum_memo.cpp  catalan.cpp  catalanNumbers.cpp  factorial.cpp  fibonacci.cpp  fibonacci2.cpp  gridTraveller.cpp  howSum.cpp  knapsackRecur.cpp  maxSubArray.cpp  maxSubArraySum.cpp  neatPrint.cpp  stringDistance.cpp
files/: CMakeLists.txt
files/src/: readFile.cpp  register.txt  save_to_file.cpp  update_file.cpp
finite_state_machine/: Makefile  all_states.cpp  all_states.h  event_gen.cpp  event_gen.h  fsm.cpp  fsm.h  main.cpp  state.h  state_machine.h
hashTable/: CMakeLists.txt
heapSort/: CMakeLists.txt
insertSort/: CMakeLists.txt
insert_sort/: CMakeLists.txt
iterativeBinarySearch/: CMakeLists.txt
iterativeBinarySearch/lib/: iterativeBinarySearch.h
iterativeBinarySearch/src/: iterativeBinarySearch.cpp  main.cpp
jsoncpp/: BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Makefile  appveyor.yml  dev.makefile  doxybuild.py  get_version.pl  jsoncppConfig.cmake.in  meson.build  parse_json.cpp
jumpSearch/: CMakeLists.txt
jumpSearch/lib/: jumpSearch.h
jumpSearch/src/: jumpSearch.cpp  main.cpp
mergeInsertSort/: CMakeLists.txt
mergeSort/: CMakeLists.txt
mergeSort/lib/: mergeSort.h
mergeSort/src/: main.cpp
merge_sort/: CMakeLists.txt
mobile_robot/: beeClust.cpp  beeClustStage.cpp  colias.cpp  init.cpp  mona.cpp  mona_test.cpp  obstacle_avoider.cpp  remote_control.cpp  ultrasonic_sensor.cpp
mysql/: Makefile  Makefile.txt  mysql_connection.cpp  mysql_connector.code-workspace  mysql_devapi.cpp  mysql_legacy_jdbc.cpp  mysql_second.cpp  test_db.sql
nodes/: CMakeLists.txt
number/: CMakeLists.txt  cmake_instructions.txt
number/lib/: char_to_ascii.h  number.h  selection_sort.h
number/src/: ascii_value.c  char_to_ascii.c  main.c  number.c  selection_sort.c  selection_sort_main.c
obstacleAvoider/: CMakeLists.txt
obstacleAvoider/lib/: Servo.h  angle_range.h  arduino.h  dc_motor.h  servo_motor.h  speed_direction.h  speed_value.h  timer.h  turning_time.h  ultrasonic_sensor.h
obstacleAvoider/src/: Servo.cpp  arduino.cpp  dc_motor.cpp  main.cpp  servo_motor.cpp  timer.cpp  ultrasonic_sensor.cpp
obstacle_avoiding_robot/: Arduino.h  bidirectional_motor.cpp  bidirectional_motor.h  main.cpp  speed_direction.h  speed_value.h  timer.cpp  timer.h  ultrasonic_sensor.cpp  ultrasonic_sensor.h
quickSort/: CMakeLists.txt
quick_sort/: CMakeLists.txt
quick_sort/src/: quick_sort.cpp  quick_sort2.cpp
ros2/: add_two_clients_async.cpp  add_two_ints_client.cpp  add_two_ints_server.cpp  imu_listener.cpp  ros_listener.cpp  ros_listener_lambda.cpp  ros_talker.cpp
searching/: CMakeLists.txt
searching/binary_search/: sorted_unsorted.cpp
searching/duplicates/: brute_force.cpp  counting.cpp  hash_table.cpp  sorting.cpp
searching/findMaxElem/: exhaustiveSearch.cpp  sorting.cpp
searching/linear_search/: unsorted_input.cpp
selection_sort/: CMakeLists.txt
singly_linked_list/: CMakeLists.txt  SLLNode.cpp  SLLNode.h  SLList.cpp  SLList.h  main.cpp
src/: CMakeCache.txt  CMakeLists.txt  mysql_connect.cpp  qbMatrix2.h  qbMatrix2_test.cpp
src/lib/: binary_search.h  quick_sort.h
src/src/: binary_search.cpp  binary_search_test.cpp  main.cpp  quick_sort.cpp
stack/: CMakeLists.txt
stack/src/: ArrayStack.cpp  ArrayStack.h  LinkedListStack.cpp  LinkedListStack.h  balanced_parenthesis.cpp
stm32_HAL_codes/: adc_uart_temperature.c  button_leds.c  dac_voltage_ramp.c  dma_ctrl_usart.c  intervals_led.c  irq_btn_led.c  main.h  one_led.c  pwm_rgb_led.c  pwm_servo_ctrl.c  stm32f4xx_it.c  timer_interrupt_led.c  timer_led.c  timer_pwm.c  uart_led.c  usart_uart_com.c
swarm/: A_Alpha_Beta.cpp  B_Alpha_Beta.cpp  C_Alpha_Beta.cpp  communication.cpp  communication.h  main.cpp  movement.cpp  movement.h  report.cpp  robot.cpp  robot.h
swarm_robots/: Two great projects.txt
(+106 files in other folders)
